--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+#version: "3.9"
 services:
   php-gql:
     build:
@@ -18,8 +18,8 @@ services:
       - DB_HOST=mysql_gql
       - DB_PORT=3306
       - DB_DATABASE=php-gql
-      - DB_USERNAME=guest
-      - DB_PASSWORD=guest
+      - DB_USERNAME=root
+      - DB_PASSWORD=root1234
       - MODE=DEVELOPMENT
       - LOG_ENABLED=true
       - SECURE=false
@@ -54,14 +54,14 @@ services:
     volumes:
       - ./seed:/docker-entrypoint-initdb.d
       - ./mysql.cnf:/etc/mysql/conf.d/my.cnf
-    command: --default-authentication-plugin=mysql_native_password
+    #command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3308:3306"
     environment:
       - MYSQL_DATABASE=php-gql
-      - MYSQL_USER=guest
-      - MYSQL_PASSWORD=guest
-      - MYSQL_ROOT_PASSWORD=root
+     # - MYSQL_USER=root
+      - MYSQL_PASSWORD=root1234
+      - MYSQL_ROOT_PASSWORD=root1234
     healthcheck:
       test:
         [
